--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 appnope==0.1.0
-bleach==2.1.1
+bleach==1.5.0
 configparser==3.5.0
 cycler==0.10.0
 decorator==4.1.2
 entrypoints==0.2.3
-html5lib==1.0b10
+html5lib==0.9999999
 ipykernel==4.6.1
 ipython==6.2.1
 ipython-genutils==0.2.0
@@ -16,11 +16,13 @@ jupyter==1.0.0
 jupyter-client==5.1.0
 jupyter-console==5.2.0
 jupyter-core==4.3.0
+Markdown==2.6.9
 MarkupSafe==1.0
 matplotlib==2.1.0
 mistune==0.7.4
 nbconvert==5.3.1
 nbformat==4.4.0
+nltk==3.2.5
 notebook==5.2.0
 numpy==1.13.3
 pandas==0.20.3
@@ -29,6 +31,7 @@ parso==0.1.0
 pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
+protobuf==3.4.0
 ptyprocess==0.5.2
 Pygments==2.2.0
 PyMySQL==0.7.11
@@ -44,10 +47,13 @@ simplegeneric==0.8.1
 six==1.11.0
 sklearn==0.0
 SQLAlchemy==1.2.0b3
+tensorflow==1.3.0
+tensorflow-tensorboard==0.1.8
 terminado==0.6
 testpath==0.3.1
 tornado==4.5.2
 traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.12.2
 widgetsnbextension==3.0.6
